# ssnet

./: pyproject.toml
ssnet/: alexnet.py
tests/: test_alexnet.py
