[tool.poetry]
name = "ssnet"
version = "0.1.0"
description = ""
authors = ["sheltonsuen <sheltonsuen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
